Xref link processing 2ndpass mode

--- a/templates/basic/delegate.mustache
+++ b/templates/basic/delegate.mustache
@@ -11,12 +11,12 @@
 **Parameters:**
 
 {{#parameters}}
-- `{{name}}` (<xref uid="{{type.uid}}">{{type.name}}</xref>): {{description}}
+- `{{name}}` (<xref href="{{type.uid}}">{{type.name}}</xref>): {{description}}
 {{/parameters}}
 
 {{/hasParameters}}
 {{#hasReturns}}
-**Returns:** <xref uid="{{returns.type.uid}}">{{returns.type.name}}</xref>
+**Returns:** <xref href="{{returns.type.uid}}">{{returns.type.name}}</xref>
 
 {{#returns.description}}
 {{returns.description}}
